mongos.yaml
apiVersion: apps/v1
kind: Deployment
metadata: { name: mongos }
spec:
  replicas: 1
  selector: { matchLabels: { app: mongos } }
  template:
    metadata: { labels: { app: mongos } }
    spec:
      containers:
        - name: mongos
          image: mongo:6
          command: ["mongos", "--configdb", "configReplSet/mongo-config-0.mongo-config:27019", "--bind_ip_all", "--port", "27017"]
          ports: [{ containerPort: 27017 }]
          resources:
            requests: { cpu: "80m", memory: "192Mi" }
            limits: { cpu: "200m", memory: "384Mi" }
---
apiVersion: v1
kind: Service
metadata: { name: mongos }
spec:
  selector: { app: mongos }
  ports: [{ port: 27017, targetPort: 27017 }]
