spring-service.yml
apiVersion: v1
kind: Service
metadata:
  name: springboot-service
spec:
  type: NodePort
  selector:
    app: springboot
  ports:
  - port: 8080
    targetPort: 8080
    nodePort: 30007
